--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -18,6 +19,7 @@
     "mongoose": "^8.13.1"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.1",
     "gh-pages": "^6.3.0"
   }
 }
